--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_BODY_CONNECTION=mybodytech
+DB_BODY_HOST=127.0.0.1
+DB_BODY_PORT=3306
+DB_BODY_DATABASE=laravel
+DB_BODY_USERNAME=root
+DB_BODY_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
