--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/material": "^5.10.9",
+        "@mui/styles": "^5.10.9"
     }
 }
