--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@mui/icons-material": "^5.10.9",
         "@mui/lab": "^5.0.0-alpha.103",
         "@mui/material": "^5.10.9",
+        "notistack": "^2.0.7",
         "react-hook-form": "^7.37.0",
         "simplebar-react": "^2.4.3",
         "yup": "^0.32.11"
