--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# MERCADO PAGO
+BODYTECH_TOKEN_MERCADO_PAGO=
+ATHLETIC_TOKEN_MERCADO_PAGO=
+SEARCH_CUSTOMER_MERCADO_PAGO_URL=
+MERCADO_PAGO_API_PAYMENT_URL=
