--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,10 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # MERCADO PAGO
+MERCADO_PAGO_API_URL=https://api.mercadopago.com/v1
+MERCADO_PAGO_API_PAYMENT_URL=https://api.mercadopago.com/v1/payments
+SEARCH_CUSTOMER_MERCADO_PAGO_URL=https://api.mercadopago.com/v1/customers/search
 BODYTECH_TOKEN_MERCADO_PAGO=
 ATHLETIC_TOKEN_MERCADO_PAGO=
-SEARCH_CUSTOMER_MERCADO_PAGO_URL=
-MERCADO_PAGO_API_PAYMENT_URL=
+PUBLIC_KEY_ATHLETIC=
+PUBLIC_KEY_BODYTECH=
